--- a/APPLI/SET_CATEGORY/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_CATEGORY/LISTS/HTML/RECORDS.HTML
@@ -7,10 +7,21 @@
             <span class="label label-default">%2</span>
         </td>
         <td>
-            <input type="text" name="SET_CATEGORY_NAME_%2" id="SET_CATEGORY_NAME_%2" value="%3" class="form-control" />
+            <input type="text" 
+                    name="SET_CATEGORY_NM_EN_%2" 
+                    id="SET_CATEGORY_NM_EN_%2" value="%3" 
+                    class="form-control" 
+                    placeholder="作業カテゴリ名(英語)" />
         </td>
         <td>
-            <a href="" class="btn btn-warning" id="SET_CATEGORY_EDIT_%2" onclick="editSetCategory(%2); return false;" >EDIT</a>
+            <input type="text" 
+                    name="SET_CATEGORY_NM_JP_%2" 
+                    id="SET_CATEGORY_NM_JP_%2" value="%4" 
+                    class="form-control" 
+                    placeholder="作業カテゴリ名(日本語)" />
+        </td>
+        <td>
+            <a class="btn btn-warning" id="SET_CATEGORY_EDIT_%2" onclick="editSetCategory(%2); return false;" >EDIT</a>
         </td>
         <td>
             <a class="btn btn-danger" id="SET_CATEGORY_DELETE_%2" onclick="deleteSetCategory(%2);" >DELETE</a>
