--- a/APPLI/SET_CATEGORY/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_CATEGORY/LISTS/HTML/TABLE.HTML
@@ -1,26 +1,38 @@
-                   <table class="table">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>CATEGORY NO</th>
-                                <th>CATEGORY NAME</th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-###TABLE_RECORDS###
-                           <tr>
-                                <td>--</td>
-                                <td>
-                                    <span class="label label-default">NEW</span>
-                                </td>
-                                <td>
-                                    <input type="text" id="NEW_SET_CATEGORY_NAME" name="NEW_SET_CATEGORY_NAME" value="" class="form-control" style="" placeholder="Set category name" >
-                                </td>
-                                <td>
-                                    <a href="" class="btn btn-primary" onclick="newSetCategory(); return false;">NEW</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+<table class="table">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>CATEGORY NO</th>
+            <th>CATEGORY NAME(EN)</th>
+            <th>CATEGORY NAME(JP)</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>-</td>
+            <td>
+                <span class="label label-default">NEW</span>
+            </td>
+            <td>
+                <input type="text" 
+                        id="SET_CATEGORY_NM_EN_NEW" 
+                        name="SET_CATEGORY_NM_EN_NEW" value="" 
+                        class="form-control" 
+                        placeholder="セットカテゴリ名(英語)" >
+            </td>
+            <td>
+                <input type="text" 
+                        id="SET_CATEGORY_NM_JP_NEW" 
+                        name="SET_CATEGORY_NM_JP_NEW" value="" 
+                        class="form-control" 
+                        placeholder="セットカテゴリ名(日本語)" />
+            </td>
+            <td>
+                <a class="btn btn-primary" onclick="newSetCategory(); return false;">NEW</a>
+            </td>
+        </tr>
+        ###TABLE_RECORDS###
+    </tbody>
+</table>
