OPERATION DETAIL added.

--- a/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
@@ -43,7 +43,7 @@
     <!--ボタン-->
     <td>
         <!--詳細ボタン-->
-        <a class="btn btn-success btn-sm" id="OPERATION_DETAIL_%2" onclick="detailOperation(%2); return false;" >DETAIL</a>
+        <a class="btn btn-success btn-sm" id="OPERATION_DETAIL_%2" onclick="goToDetail(%2); return false;" >DETAIL</a>
         <!--更新ボタン-->
         <a class="btn btn-warning btn-sm" id="OPERATION_EDIT_%2" onclick="editOperation(%2); return false;" >EDIT</a>
         <!--削除ボタン-->
