--- a/APPLI/OPERATION_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/SHOW.HTML
@@ -172,6 +172,24 @@
         //$('#CATEGORY_NO').val(cat_no);
     });
 
+    //詳細画面へ遷移
+    function goToDetail(id) {
+
+        //バリデーションエラーMSG初期化
+        validationErrMsgInit();
+
+        //GETパラメーターの順番は、action,page,serach,category-nm,category-no が前提
+        var action = '?action=SHOW';
+        var page = '&page=' + $('#page').val();
+        var search = '&search=' + $('#search').val();
+        var categoryNm = '&category-nm=' + $('#CATEGORY_NM_HID_PAGE').val();
+        var categoryNo = '&category-no=' + $('#CATEGORY_NO_HID_PAGE').val();
+        var operationId = '&id=' + id;
+
+        //詳細へ 
+        location.href='/APP/OPERATION_DETAIL/LISTS' + action + page + search + categoryNm + categoryNo + operationId;
+    }
+
     //作業追加
     function newOperation() {
 
@@ -221,28 +239,6 @@
         jqXHR.fail(function(data) {
             alert("新規登録処理に失敗しました。");
         });
-    }
-
-    //詳細画面へ遷移
-    function detailOperation(id) {
-
-        //バリデーションエラーMSG初期化
-        validationErrMsgInit();
-
-        //GETパラメーターの順番は、action,page,serach,category-nm,category-no が前提
-        var action = '?action=SHOW';
-        var page = '&page=' + $('#page').val();
-        var search = '&search=' + $('#search').val();
-        var categoryNm = $('#CATEGORY_NM_HID_PAGE').val();
-        var categoryNo = $('#CATEGORY_NO_HID_PAGE').val();
-        if (categoryNo != '') {
-            categoryNm = '&category-nm=' + categoryNm;
-            categoryNo = '&category-no=' + categoryNo;
-        }
-        var operationId = '&id=' + id;
-
-        //詳細へ 
-        location.href='/APP/OPERATION_DETAIL/LISTS' + action + page + search + categoryNm + categoryNo + operationId;
     }
 
 
