--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -43,7 +43,7 @@
     <!--詳細ボタン-->
     <td>
         <!--詳細ボタン-->
-        <a class="btn btn-success btn-sm" id="PARTS_DETAIL_%2" onclick="detailParts(%2); return false;" >DETAIL</a>
+        <a class="btn btn-success btn-sm" id="PARTS_DETAIL_%2" onclick="goToDetail(%2); return false;" >DETAIL</a>
         <!--更新ボタン-->
         <a class="btn btn-warning btn-sm" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
         <!--削除ボタン-->
