SET CATEGORY key-value対応

--- a/APPLI/SET_CATEGORY/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_CATEGORY/LISTS/HTML/RECORDS.HTML
@@ -2,7 +2,6 @@
 
 <!--RECORDS-->
     <tr id="edit-row-%2">
-        <td>%1</td>
         <td>
             <span class="label label-default">%2</span>
         </td>
@@ -11,14 +10,14 @@
                     name="SET_CATEGORY_NM_EN_%2" 
                     id="SET_CATEGORY_NM_EN_%2" value="%3" 
                     class="form-control" 
-                    placeholder="作業カテゴリ名(英語)" />
+                    placeholder="セットカテゴリ名(英語)" />
         </td>
         <td>
             <input type="text" 
                     name="SET_CATEGORY_NM_JP_%2" 
                     id="SET_CATEGORY_NM_JP_%2" value="%4" 
                     class="form-control" 
-                    placeholder="作業カテゴリ名(日本語)" />
+                    placeholder="セットカテゴリ名(日本語)" />
         </td>
         <td>
             <a class="btn btn-warning" id="SET_CATEGORY_EDIT_%2" onclick="editSetCategory(%2); return false;" >EDIT</a>
