SET LIST EMAKING.

--- a/APPLI/SET_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
@@ -1,6 +1,6 @@
-<!--OPERATION CATEGORY Records for NEW-->
+<!--PARTS CATEGORY Records for Page Filter-->
 <!--RECORDS-->
-<li name="OPERATION">
+<li name="CATEGORY_PAGE">
     <a class="category-list" id="cat_list_%1" >%2</a>
 </li>
 <!--RECORDS-->
