--- a/APPLI/SET_LIST/SEARCH/HTML/DROPDOWN_LIST.HTML
+++ b/APPLI/SET_LIST/SEARCH/HTML/DROPDOWN_LIST.HTML
@@ -1,7 +1,7 @@
-<!--SET SEARCH RESULT DROPDOWN LISTS Records-->
+<!--PARTS SEARCH RESULT DROPDOWN LISTS Records-->
 
 <!--RECORDS-->
-    <li class="list-set" id="list-###ROW###-%1" value="%1"><a>%4</a></li>
-    <input type="hidden" id="SET_NM_###ROW###_%1" value="%4">
-    <input type="hidden" id="SET_PRICE_###ROW###_%1" value="%6">
+    <li class="list-parts" id="list-###ROW###-%1" value="%1"><a>%4</a></li>
+    <input type="hidden" id="PARTS_NM_###ROW###_%1" value="%4">
+    <input type="hidden" id="PARTS_PRICE_###ROW###_%1" value="%6">
 <!--RECORDS-->
