--- a/APPLI/SET_LIST/LISTS/HTML/CATEGORY_LIST.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/CATEGORY_LIST.HTML
@@ -1,6 +1,6 @@
-<!--OPERATION CATEGORY Records for List-->
+<!--PARTS CATEGORY Records for List-->
 <!--RECORDS-->
-<li name="OPERATION">
+<li name="CATEGORY_LIST">
     <a class="category-list" id="cat_list_%1" >%2</a>
 <!--ROWS-->
 <!--RECORDS-->
