--- a/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
@@ -1,10 +1,8 @@
-<!--PARTS LISTS Records-->
+<!--SET LISTS Records-->
 <!--<html>-->
 
 <!--RECORDS-->
 <tr id="edit-row-%2">
-    <!--順番-->
-    <td>%1</td>
     <!--ID-->
     <td>
         <span class="label label-default">%2</span>
@@ -32,22 +30,22 @@
             </div>
         </div>
     </td>
-    <!--作業名-->
+    <!--セット名-->
     <td>
-        <input type="text" name="PARTS_NAME_%2" id="PARTS_NAME_%2" value="%5" class="form-control input-sm" />
+        <input type="text" name="SET_NAME_%2" id="SET_NAME_%2" value="%5" class="form-control input-sm" />
     </td>
     <!--料金-->
     <td>
-        <input type="number" name="PARTS_PRICE_%2" id="PARTS_PRICE_%2" value="%6" class="form-control input-sm" />
+        <input type="number" name="SET_PRICE_%2" id="SET_PRICE_%2" value="%6" class="form-control input-sm" />
     </td>
     <!--詳細ボタン-->
     <td>
         <!--詳細ボタン-->
-        <a class="btn btn-success btn-sm" id="PARTS_DETAIL_%2" onclick="goToDetail(%2); return false;" >DETAIL</a>
+        <a class="btn btn-success btn-sm" id="SET_DETAIL_%2" onclick="goToDetail(%2); return false;" >DETAIL</a>
         <!--更新ボタン-->
-        <a class="btn btn-warning btn-sm" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
+        <a class="btn btn-warning btn-sm" id="SET_EDIT_%2" onclick="editSet(%2); return false;" >EDIT</a>
         <!--削除ボタン-->
-        <a class="btn btn-danger btn-sm" id="PARTS_DELETE_%2" onclick="deleteParts(%2); return false;" >DEL</a>
+        <a class="btn btn-danger btn-sm" id="SET_DELETE_%2" onclick="deleteSet(%2); return false;" >DEL</a>
     </td>
 </tr>
 <!--RECORDS-->
